# pystack

./: .gitignore  README.md  justfile  pyproject.toml
src/orchestration/: assets.py  dagster.yaml  definitions.py
src/source_data/: star_wars_film_data.csv
src/transformation/: dbt_project.yml
src/transformation/models/: sources.yml
src/transformation/models/domain/: dmn_characters.sql  dmn_film_finances.sql  dmn_planets.sql  dmn_species.sql  dmn_starships.sql  domain.yml
src/transformation/models/presentation/: presentation.yml  prs_film.sql  prs_film_attributes.sql
src/transformation/models/staging/: staging.yml  stg_characters.sql  stg_film_metadata.sql  stg_films.sql  stg_films_characters.sql  stg_films_planets.sql  stg_films_species.sql  stg_films_starships.sql  stg_planets.sql  stg_species.sql  stg_starships.sql
src/visualisation/: app.py  get_data.py
