[project]
name = "pystack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess-com>=3.11.1",
    "dagster>=1.10.10",
    "dagster-dbt>=0.26.10",
    "dagster-dlt>=0.26.10",
    "dagster-duckdb>=0.26.10",
    "dagster-webserver>=1.10.10",
    "dbt-core>=1.9.4",
    "dbt-duckdb>=1.9.2",
    "dlt>=1.9.0",
    "duckdb>=1.2.1",
    "enlighten>=1.14.1",
    "faker>=37.1.0",
    "harlequin>=2.1.1",
    "polars>=1.26.0",
    "rich>=13.9.4",
    "streamlit>=1.44.0",
]
